MODON MRE BPDEV/force-app/main/default/objects/SalesOrderRelationship__c/SalesOrderRelationship__c.object-meta.xml
<CustomObject>
    <description>SO Relationship creates 3rd party relationship</description>
    <label>Sales Order Relationship</label>
    <nameField>
        <displayFormat>SOR-{0000}</displayFormat>
        <label>SO Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>