MODON MRE BPDEV/force-app/main/default/objects/SalesOrderRelationship__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <formula>TEXT(ThridPartyCustomer__r.ComplianceStatus__c)</formula>
    <label>Compliance Status (3rd Party)</label>
    <type>Text</type>
</CustomField>