MODON MRE BPDEV/force-app/main/default/objects/SalesOrderRelationship__c/fields/RelationshipOracleId__c.field-meta.xml
<CustomField>
    <fullName>RelationshipOracleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Oracle Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>