MODON MRE BPDEV/force-app/main/default/objects/SalesOrderRelationship__c/fields/ThridPartyCustomer__c.field-meta.xml
<CustomField>
    <fullName>ThridPartyCustomer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer (3rd Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Relationships</relationshipLabel>
    <relationshipName>Sales_Order_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>